# today-anime

./: .gitignore  CHANGELOG.md  README.md
.circleci/: config.yml
annict/: annict.atd  annict.ml  annict.mli  annict_client.ml  annict_client.mli  annict_me.atd  annict_me.ml  annict_me.mli  dune
api/: api.atd  convert.ml  convert.mli  dune  main.ml
app/: app.ml  app.mli  config.atd  config.ml  config.mli  dune  program.ml  program.mli
cli/: dune  main.ml
lib/: annict.atd  annict.ml  annict.mli  dune  syoboi.ml
syobocal/: dune  syobocal.ml  syobocal.mli  syobocal_rss2.atd
