(rule
 (targets annict_t.ml annict_t.mli)
  (deps    annict.atd)
  (action  (run atdgen -t %{deps})))

(rule
 (targets annict_j.ml annict_j.mli)
  (deps    annict.atd)
  (action  (run atdgen -j -j-std %{deps})))

(rule
 (targets syoboi_rss2_t.ml syoboi_rss2_t.mli)
  (deps    syoboi_rss2.atd)
  (action  (run atdgen -t %{deps})))

(rule
 (targets syoboi_rss2_j.ml syoboi_rss2_j.mli)
  (deps    syoboi_rss2.atd)
  (action  (run atdgen -j -j-std %{deps})))

(library
  (name lib)
  (libraries core async_ssl cohttp-async yojson atdgen calendar))